test: Add integration tests using generated fixtures
- Implemented WAV file loading using hound crate
- Added 5 integration tests:
  - 120 BPM kick pattern validation
  - 128 BPM kick pattern validation
  - C major scale validation
  - Silence detection and trimming validation
  - Silent audio edge case handling
- All tests passing (5/5)
- Tests validate Phase 1A functionality (preprocessing + onset detection)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "stratum-audio-analysis"
+name = "stratum-dsp"
 version = "0.1.0"
 edition = "2021"
 authors = ["HLLMR"]
@@ -31,13 +31,14 @@ rayon = "1.8"
 [dev-dependencies]
 env_logger = "0.11"
 criterion = { version = "0.5", features = ["html_reports"] }
+hound = "3.5"  # WAV file reading for integration tests
 
 [features]
 default = []
 ml = ["ort"]
 
 [lib]
-name = "stratum_audio_analysis"
+name = "stratum_dsp"
 path = "src/lib.rs"
 
 [[bench]]
