Fix: Remove invalid category for crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "Professional-grade audio analysis engine for DJ applications: BPM
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/HLLMR/stratum-dsp"
 keywords = ["audio", "dsp", "bpm", "key-detection", "beat-tracking"]
-categories = ["multimedia::audio", "science::audio"]
+categories = ["multimedia::audio"]
 readme = "README.md"
 
 [dependencies]
